# ps-mcp

./: .gitignore  README.md  config.py  environment.yml  install.bat  main.py  pyproject.toml  requirements.txt  run.bat  run_tests.bat
docs/: implementation_plan.md
examples/: cherry_studio_config.json  cline_config.json  cline_settings.json  cursor_config.json
tests/: __init__.py  test_advanced.py  test_basic.py  test_call_mcp.py  test_image_processor.py
tools/: __init__.py  advanced.py  basic.py  color_adjust.py  effects.py  filters.py  tools_summary.py  transform.py
utils/: __init__.py  image_processor.py  image_utils.py  performance.py  validation.py
